force-app/main/default/objects/course__c/course__c.object-meta.xml
<CustomObject>
    <label>course</label>
    <nameField>
        <label>course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>