force-app/main/default/objects/course__c/fields/Course_name__c.field-meta.xml
<CustomField>
    <fullName>Course_name__c</fullName>
    <label>lab requirement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>