force-app/main/default/objects/course__c/fields/course_number__c.field-meta.xml
<CustomField>
    <fullName>course_number__c</fullName>
    <displayFormat>AN-{0000000}</displayFormat>
    <label>course_number</label>
    <type>AutoNumber</type>
</CustomField>