force-app/main/default/objects/course__c/fields/master__c.field-meta.xml
<CustomField>
    <fullName>master__c</fullName>
    <label>Department</label>
    <referenceTo>Deapartment__c</referenceTo>
    <relationshipLabel>courses (Department)</relationshipLabel>
    <relationshipName>courses1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>