force-app/main/default/objects/course__c/fields/Professor__c.field-meta.xml
<CustomField>
    <fullName>Professor__c</fullName>
    <label>Professor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>swetha</fullName>
            </value>
            <value>
                <fullName>Nikhlesh</fullName>
            </value>
            <value>
                <fullName>anusha</fullName>
            </value>
            <value>
                <fullName>bomule</fullName>
            </value>
            <value>
                <fullName>amar</fullName>
            </value>
            <value>
                <fullName>meka</fullName>
            </value>
            <value>
                <fullName>paru</fullName>
            </value>
            <value>
                <fullName>snehit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>